Final fixes.